<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9ED6E4"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/campoNome"
        android:ems="10"
        android:hint="@string/hintNome"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:shadowColor="#BD2121"
        android:textColor="#000000"
        android:textColorHighlight="#00BCD4"
        android:textColorHint="#00BCD4"
        android:textColorLink="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtNome"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/checkM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:buttonTint="#000000"
        android:checked="false"
        android:text="@string/masc"
        android:textColor="#000000"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/checkF"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSexo" />

    <EditText
        android:id="@+id/edtAltura"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/campoAltura"
        android:ems="10"
        android:hint="@string/hintAltura"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHighlight="#00BCD4"
        android:textColorHint="#00BCD4"
        android:textColorLink="#00BCD4"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtAltura"
        app:layout_constraintTop_toBottomOf="@+id/edtPeso"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtPeso"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/peso"
        android:text="@string/peso"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtPeso"
        app:layout_constraintEnd_toStartOf="@+id/edtPeso"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNome" />

    <TextView
        android:id="@+id/txtSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/sexo"
        android:text="@string/sexo"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAltura" />

    <EditText
        android:id="@+id/edtPeso"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/campoPeso"
        android:ems="10"
        android:hint="@string/hintPeso"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHighlight="#00BCD4"
        android:textColorHint="#00BCD4"
        android:textColorLink="#00BCD4"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtPeso"
        app:layout_constraintTop_toBottomOf="@+id/edtNome"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/checkF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:buttonTint="#000000"
        android:checked="false"
        android:text="@string/fem"
        android:textColor="#000000"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkM"
        app:layout_constraintTop_toBottomOf="@+id/txtSexo" />

    <TextView
        android:id="@+id/txtAltura"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/altura"
        android:text="@string/altura"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtAltura"
        app:layout_constraintEnd_toStartOf="@+id/edtAltura"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPeso" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/nome"
        android:text="@string/nome"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtNome"
        app:layout_constraintEnd_toStartOf="@+id/edtNome"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#000000"
        android:contentDescription="@string/calcular"
        android:text="@string/btnCalcular"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#00BCD4"
        android:textColorLink="#00BCD4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkM" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="175dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_104620698_prmo_imc_br_nc" />

</androidx.constraintlayout.widget.ConstraintLayout>